# backup

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  backup.sh
.github/workflows/: auto-tag.yml  pr-lint.yml  release.yml  version-check.yml
docker/: Dockerfile.centos6  Dockerfile.e2e_runner  Dockerfile.rocky9
docs/: prd-codebase-architecture-improvements.md
docs/adr/: 0001-remove-dead-systemd-unit-renderers.md
docs/agents/: domain.md
docs/reference/: README.md  isms-backup-summary.md  isms-rocky9-restic-sftp-guide.md  log-offsite-backup-s3-storage-guide.md  oss-s3-backup-tool-guide.md  prd_improve_architecture.md  restic-retry-reliability-guide.md  (+1 more)
scripts/: install.sh  run_e2e_compose.sh  test_coverage.sh
src/: i18n.rs  lib.rs  main.rs
tests/: MANUAL_CHECKLIST.md  backend_adapters.bats  build_dest_config.bats  cli_lifecycle_test.rs  cli_test.rs  cmd_audit.bats  cmd_chrony.bats  cmd_config.bats  cmd_config_test.rs  cmd_doctor_test.rs  cmd_import.bats  cmd_init.bats  cmd_install.bats  cmd_migrate.bats  cmd_ntp.bats  cmd_restore_test.rs  cmd_run.bats  cmd_run_test.rs  cmd_schedule.bats  cmd_schedule_test.rs  cmd_setting_s3.bats  cmd_setting_sftp.bats  cmd_setup_test.rs  cmd_status.bats  cmd_uninstall.bats  cmd_uninstall_test.rs  cmd_update.bats  cmd_update_test.rs  cmd_upgrade.bats  cmd_upgrade_config.bats  cmd_wizard.bats  config_registry.bats  config_test.rs  database_adapters.bats  dependency_checks.bats  docker-compose.yml  downloader_test.bats  e2e_cli_lifecycle_test.rs  e2e_db_streaming_matrix_test.rs  e2e_full_workflow.rs  (+24 more)
(+53 files in other folders)
