[package]
name = "backup"
version = "0.1.8"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
inquire = "0.7"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0"
tempfile = "3.10"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
testcontainers = { version = "0.23", features = ["blocking"] }
